crud without login ready

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,5 +1,8 @@
+*{
+  font-size: x-large;
+}
+
 body {
-  
   background: #c33764; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
@@ -11,5 +14,4 @@ body {
     #1d2671,
     #701f39
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 }
