--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,5 +1,5 @@
 {{#each errors}}
-  <div class="col-md-4 mx-auto alert alert-danger alert-dismissible fade show" role="alert">
+  <div class="col-md mx-auto alert alert-danger alert-dismissible fade show" role="alert">
    {{text}}
     <button
       type="button"
@@ -10,7 +10,7 @@
   </div>
 {{/each}}
 
-<div class="col-md-4 mx-auto">
+<div class="col-md mx-auto">
   <div class="card">
     <div class="card-header">
       <h1>New Note</h1>
