--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <script src="https://kit.fontawesome.com/e5ee384728.js" crossorigin="anonymous"></script>
     {{! Custom CSS }}
     <link rel="stylesheet" href="/css/main.css" />
     <title>NotAp</title>
@@ -13,18 +14,13 @@
     <p>Navigation</p>
 
     <main class="container">
-
+      {{> messages }}
       {{{body}}}
 
       
     </main>
 
     <p>Footer</p>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-      crossorigin="anonymous"
-    ></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
