Login finished, not navigation

--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -1,7 +1,7 @@
 <div class="row">
   {{#each notes}}
 
-    <div class="col-md">
+    <div class="col-md-8 mx-auto my-3">
       <div class="card">
         <div class="card-body">
           <h4
@@ -25,7 +25,7 @@
 
   {{else}}
 
-    <div class="card col-md mx-auto">
+    <div class="card col-md-8 mx-auto">
       <div class="card-body">
         <p class="lead">There are not notes yet.</p>
         <div class="form-group d-grid gap-2">
