--- a/src/views/partials/messages.hbs
+++ b/src/views/partials/messages.hbs
@@ -1,6 +1,6 @@
 {{#if success_msg}}
   <div
-    class="col-md mx-auto alert alert-success alert-dismissible fade show"
+    class="col-md-8 mx-auto alert alert-success alert-dismissible fade show"
     role="alert"
   >
     {{success_msg}}
