--- a/src/views/notes/edit-note.hbs
+++ b/src/views/notes/edit-note.hbs
@@ -1,4 +1,4 @@
-<div class="col-md mx-4">
+<div class="col-md-8 mx-auto">
   <div class="card">
     <div class="card-header">
       <h3>Edit Note</h3>
@@ -20,7 +20,7 @@
               class="form-control my-3"
             >{{data.description}}</textarea>
           </div>
-          <div class="form-group d-grid gap-2 form-group">
+          <div class="form-group d-grid gap-2">
               <button class="btn btn-primary" type="submit">
                 Save
               </button>
