--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -1,1 +1,56 @@
-<h1>SignUp</h1>
+<div class="row">
+  <div class="col-md-10 mx-auto">
+    <div class="card">
+      <div class="card-header">
+        Account Register
+      </div>
+      <div class="card-body">
+        <form action="/users/signup" method="POST">
+          <div class="form-group">
+            <input
+              type="text"
+              name="name"
+              class="form-control mt-2"
+              placeholder="Name"
+              autofocus
+              autocomplete="off"
+              value="{{name}}"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="email"
+              name="email"
+              class="form-control mt-2"
+              placeholder="Email"
+              autocomplete="off"
+              value="{{email}}"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="password"
+              name="password"
+              class="form-control mt-2  "
+              placeholder="Password"
+              autocomplete="off"
+              value="{{password}}"
+            />
+          <div class="form-group">
+            <input
+              type="password"
+              name="confirm_password"
+              class="form-control mt-2  "
+              placeholder="Confirm Password"
+              autocomplete="off"
+              value="{{confirm_password}}"
+            />
+            <div class="form-group d-grid gap-2">
+                <button type="submit" class="btn btn-primary mt-4">SignUp</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
