--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -7,11 +7,11 @@
     <script src="https://kit.fontawesome.com/e5ee384728.js" crossorigin="anonymous"></script>
     {{! Custom CSS }}
     <link rel="stylesheet" href="/css/main.css" />
-    <title>NotAp</title>
+    <title>NotApp</title>
   </head>
   <body>
 
-    <p>Navigation</p>
+    {{> navigation}}
 
     <main class="container">
       {{> messages }}
