--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -27,7 +27,9 @@
 
     <div class="card col-md-8 mx-auto">
       <div class="card-body">
-        <p class="lead">There are not notes yet.</p>
+        <h1 class="text-center">Hello {{user.name}}<h1>
+          <hr class="lead">
+          <p class="lead">There are not notes yet.</p>
         <div class="form-group d-grid gap-2">
           <a class="btn btn-success btn-sm" href="/notes/add">Create one!</a>
         </div>
