--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,10 +1,14 @@
-<div class="container-sm mx-4 py-5 bg-light">
-    <h1 class="d-2"></h1>
+<div class="container col-md-10 mx-auto py-4 bg-light">
+    <h1 class="d-2 text-center">NotApp</h1>
         <p class="lead">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex quidem nostrum.
+            Simple and usefull
         </p>
         <hr class="my-4">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, earum sed in facere laborum numquam ab nobis esse quaerat. Doloremque cumque magnam provident rerum dolorem non voluptas expedita officiis vel.</p>
-        <a href="http://lighnio.github.io" class="btn btn-primary btn-lg">PortFolio</a>
+        {{!-- <a href="http://lighnio.github.io" class="btn btn-primary btn-lg">SignIn</a> --}}
+        <div class="d-grid gap-2">
+            <a href="/users/signin" class="btn btn-primary mt-3">SignIn</a>
+            <a href="/users/signup" class="btn btn-primary mt-3">SignUp</a>
+        </div>
     </h1>
 </div>
