--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,7 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">NotApp</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -13,7 +21,12 @@
           <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-primary" href="https://lighnio.github.io/#portfolio" target="_blank" tabindex="-1">More projects...</a>
+          <a
+            class="nav-link text-primary"
+            href="https://lighnio.github.io/#portfolio"
+            target="_blank"
+            tabindex="-1"
+          >More projects...</a>
         </li>
       </ul>
       <ul class="navbar-nav d-flex ms-auto">
@@ -32,7 +45,7 @@
             <a class="nav-link text-primary" href="/users/signin">SignIn</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-primary " href="/users/signup">SignUp</a>
+            <a class="nav-link text-primary" href="/users/signup">SignUp</a>
           </li>
         {{/if}}
 
